2018-01-18  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	XOAUTH2 authentication support is introduced (experimental).

	* FLIM-ELS: Install sasl-xoauth2.el when oauth2.el is installed.

	* sasl.el (sasl-mechanisms, sasl-mechanism-alist): Add entry for
	XOAUTH2.

	* sasl-xoauth2.el: New file.

2016-12-06  Piotr Trojanek  <piotr.trojanek@gmail.com>

	* luna.el (luna-class-find-member)
	(luna-class-find-or-make-member): do not modify input argument.

2016-11-30  Piotr Trojanek  <piotr.trojanek@gmail.com>

	* luna.el (luna-define-class-function): simplify iteration with
	dolist.

2016-10-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* std11.el (std11-full-name-string): Refactored.

2016-10-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* eword-decode.el (eword-decode-structured-field-body)
	(eword-decode-and-unfold-structured-field-body)
	(eword-decode-and-fold-structured-field-body): Decrease number of
	times for calling concat function.

	* std11.el (std11-wrap-as-quoted-pairs, std11-strip-quoted-pair)
	(std11-comment-value-to-string): Likewise.

2016-10-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* smtp.el (smtp-send-buffer, smtp-send-buffer-by-myself): Call
	kill-buffer with nil.  Only Emacs 23 and later support omitting an
	argument for kill-buffer.  Reported By Tatsuya Kinoshita
	<tats@vega.ocn.ne.jp>.  Cf. [wl:14662]

2016-08-31  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* eword-decode.el (eword-analyze-encoded-word): Fix the check for
	non-atom special chars to permit space chars.

2016-08-14  Erik Hetzner  <egh@e6h.org>

	* mime-en.texi: Add dir entry

	* mime-ja.texi: Likewise

2016-08-13  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* eword-decode.el (eword-analyze-encoded-word): Quote decoded word
	when it contains non-atom special chars and not quoted.
	Cf. https://github.com/wanderlust/wanderlust/issues/126

2016-03-12  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mel.el (mel-prompt-for-encoding): New function.
	(mime-encode-region, mime-decode-region)