@@ -1,3 +1,13 @@
+2018-03-29  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	Fix EHLO command is sent twice after STARTTLS command when
+	built-in GnuTLS library is used.
+
+	* smtp.el (smtp-open-gnutls-starttls-stream): Abolished.
+	(smtp-open-connection): Do not use smtp-open-gnutls-starttls-stream.
+	(smtp-primitive-starttls): Use gnutls-negotiate when built-in
+	GnuTLS is used for STARTTLS connection.
+
 2018-01-18  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	XOAUTH2 authentication support is introduced (experimental).
